--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tap": "^14.10.8"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "chokidar": "^3.4.3",
     "oh-my-log": "^5.0.1"
   }
