--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "url": "https://github.com/ahmadnassri/node-serve-reload-replace/issues"
   },
   "scripts": {
+    "start": "lib/bin.js",
     "test": "tap test --no-esm --no-coverage",
     "test:watch": "tap test --no-esm --watch",
     "test:ci": "tap test --no-esm --100 --color --coverage-report=lcov --no-browser"
