--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -256,7 +256,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write
+      packages: write
 
     steps:
       - uses: actions/checkout@v3.5.3
